--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -229,7 +229,7 @@ h3 {
 .ticket,
 .ticket-headings {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   justify-content: space-between;
   align-items: center;
@@ -238,6 +238,12 @@ h3 {
   padding: 10px 15px;
   border-radius: 5px;
   text-align: center;
+}
+
+.ticket-status {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .ticket-headings {
@@ -249,6 +255,7 @@ h3 {
   color: #fff;
   width: 100px;
   padding: 0 20px;
+  margin-bottom: 10px;
   justify-self: center;
   border-radius: 10px;
   font-size: 16px;
@@ -300,6 +307,18 @@ h3 {
   border: 1px #ccc solid;
   padding: 10px 15px;
   border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.ticket-desc p {
+  margin-left: 20px;
+}
+
+.ticket-desc h3 {
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .note {
@@ -420,5 +439,8 @@ footer {
 
   .heading p {
     font-size: 1.5rem;
+  }
+
+  .ticket-headings {
   }
 }
